# rust-bitvmx-protocol-builder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci_test.yml  rust.yml
config/: development.json
examples/: protocol_example.rs
src/: builder.rs  cli.rs  config.rs  connections.rs  errors.rs  graph.rs  lib.rs  main.rs  params.rs  scripts.rs  template.rs  templates.rs  unspendable.rs
src/builder/: builder.rs  check_params.rs  mod.rs  protocol.rs  spending_args.rs
src/graph/: estimate.rs  graph.rs  input.rs  mod.rs  output.rs
src/helpers/: mod.rs  weight_computing.rs
src/tests/: README.md  autovalues_fees_test.rs  builder_connection_test.rs  builder_outputs_test.rs  builder_persistance_test.rs  builder_test.rs  connection_test.rs  graph_test.rs  input_test.rs  mod.rs  ots_checksig.rs  ots_checksig_test.rs  output_test.rs  scripts_test.rs  single_scripts_test.rs  utils.rs  weight_computing_test.rs
src/tests/builder_test/: builder_connection_test.rs  builder_outputs_test.rs  builder_persistance_test.rs  mod.rs
src/types/: connection.rs  input.rs  mod.rs  output.rs
