[package]
name = "bitvmx-protocol-builder"
description = "Library designed to construct and manage Directed Acyclic Graphs (DAGs) of BitVMX pre-signed transactions"
version = "0.0.1"
edition = "2021"
authors = ["Diego Masini <diego.masini@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder"

[lib]
name = "protocol_builder"

[dependencies]
anyhow = "1.0.86"
bitcoin = { version = "0.32.1", features = ["std", "rand-std"]}
clap = {version = "4.5.10", features = ["derive"]}
config = "0.14.0"
console = "0.15.8"
crypto-hash = "0.3"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.5.0"
musig2 = { version = "0.0.11", features = ["secp256k1"] }
serde = "1.0.204"
serde_json = "1.0.96"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
petgraph = "0.6.5"

bitcoincore-rpc = { version = "0.19.0"}
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "bitvmx"}
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx"}

bitvmx-key-manager = { path = "../rust-bitvmx-key-manager" }

[[bin]]
name = "protocol_builder"
path = "src/main.rs"
