[package]
name = "bitvmx-protocol-builder"
description = "Library designed to construct and manage Directed Acyclic Graphs (DAGs) of BitVMX pre-signed transactions"
version = "0.0.1"
edition = "2021"
authors = ["Diego Masini <diego.masini@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder"

[lib]
name = "protocol_builder"

[dependencies]
anyhow = "1.0.93"
bitcoin = { version = "0.32.4", features = ["std", "rand-std"]}
clap = {version = "4.5.21", features = ["derive"]}
config = "0.14.1"
console = "0.15.8"
crypto-hash = "0.3"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.5.0"
musig2 = { version = "0.2.0", features = ["secp256k1"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
petgraph = {version = "0.6.5", features = ["serde-1"]}

bitcoincore-rpc = { version = "0.19.0"}
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "bitvmx"}
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx"}

bitvmx-key-manager = { path = "../rust-bitvmx-key-manager" }
rust-bitvmx-storage-backend = {path = "../rust-bitvmx-storage-backend"}

[[bin]]
name = "protocol_builder"
path = "src/main.rs"
