[package]
name = "bitvmx-protocol-builder"
description = "Library to build and manage Directed Acyclic Graphs (DAGs) of BitVMX pre-signed transactions"
version = "0.0.2"
edition = "2021"
authors = ["Diego Masini <diego.masini@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder"

[lib]
name = "protocol_builder"

[dependencies]
anyhow = "1.0.98"
bitcoin = { version = "=0.32.6", features = ["std", "rand-std"] }
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
hex = "0.4.3"
itertools = "0.14.0"
musig2 = { version = "0.2.0", features = ["secp256k1"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
petgraph = { version = "0.8.1", features = ["serde-1"] }

bitcoincore-rpc = { version = "0.19.0" }

bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "v.0.0.2" }
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "v.0.0.2" }

bitvmx-key-manager = { git = "https://github.com/FairgateLabs/rust-bitvmx-key-manager.git", branch = "v.0.0.2" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", branch = "v.0.0.2" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", branch = "v.0.0.2" }
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack.git" }
bitcoin-script-functions = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-functions.git" }
[[bin]]
name = "protocol_builder"
path = "src/main.rs"
